Fixes overflow issue, resizes react logo

--- a/src/App.scss
+++ b/src/App.scss
@@ -7,6 +7,8 @@
     box-sizing: border-box;
     --header-font: 'Ubuntu', sans-serif;
     --grey: #424242;
+    max-width: 100vw;
+    overflow-x: hidden;
 }
 
 body {
